app/app_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: librespeed
  namespace: final
  labels:
    app.kubernetes.io/name: librespeed
    app.kubernetes.io/instance: librespeed
spec:
  replicas: 1
  selector:
    matchLabels:
      app: librespeed
  template:
    metadata:
      labels:
        app: librespeed
        app.kubernetes.io/instance: librespeed
    spec:
      containers:
      - name: speedtest-container
        image: registry.rebrainme.com/workshops/middle/kubernetes-local/newplatform_autochecks/speedtest:5.3
        ports:
        - name: http
          containerPort: 80
        volumeMounts:
        - name: librespeed-servers
          mountPath: /servers.json
          subPath: servers.json
      imagePullSecrets:
      - name: registrysecret
      volumes:
      - name:  librespeed-servers
        configMap:
          name: librespeed-servers
