app/service-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-app
  namespace: final
  labels:
    app.kubernetes.io/name: librespeed
    app.kubernetes.io/instance: librespeed
spec:
  type: ClusterIP
  selector:
    app: librespeed
  ports:
  - protocol: TCP
    name: http
    port: 80
    targetPort: http
