app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: librespeed-ingress
  namespace: final
  labels:
    app.kubernetes.io/name: librespeed
    app.kubernetes.io/instance: librespeed

  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - host: 158.160.170.185.nip.io
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: service-app
            port:
              number: 80
